--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
 </head>
 <body>
   <div class="videocontainer">
-    <video loop="loop" autoplay="autoplay" muted="muted" src="/video/30-HQ-bluebg2-HB.mp4"></video>
+    <video loop="loop" autoplay="autoplay" muted="muted" src="./video/30-HQ-bluebg2-HB.mp4"></video>
   </div>
   <div class="content">
     <h1>Lorem Ipsummm</h1>
     <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis ornare vel eu leo. Cras mattis consectetur purus sit amet fermentum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
     <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis ornare vel eu leo. Cras mattis consectetur purus sit amet fermentum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-    <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div class="gmapp" style='overflow:hidden;'><div id='gmap_canvas' class="gmapp"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(48.85345419999999,2.3386445999999523),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(48.85345419999999,2.3386445999999523)});infowindow = new google.maps.InfoWindow({content:'<strong>Le Bar 3</strong><br>3 rue de l\'ancienne comédie 75006 ParisParis, France<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+    <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyDtIvLpS9iPRVdSDfaVtJjLAH-ZlO34bo0'></script>
+    <div class="gmapp" style='overflow:hidden;'>
+      <div id='gmap_canvas' class="gmapp"></div>
+      <style>#gmap_canvas img{max-width:none!important;background:none!important}</style>
+    </div>
+    <script type='text/javascript'>function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(48.85345419999999,2.3386445999999523),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(48.85345419999999,2.3386445999999523)});infowindow = new google.maps.InfoWindow({content:'<strong>Le Bar 3</strong><br>3 rue de l\'ancienne comédie 75006 ParisParis, France<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
   </div>
 </body>
 </html>
