Tries another form

--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     <h1>Lorem Ipsummm</h1>
     <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis ornare vel eu leo. Cras mattis consectetur purus sit amet fermentum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
     <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis ornare vel eu leo. Cras mattis consectetur purus sit amet fermentum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+    <script language="javascript">var sa_email_id = '79123-da62b';var sa_sent_text = 'Merci de votre rÃ©ponse !';</script>
+    <script language="javascript" src="http://s1.smartaddon.com/sa_htmlform.js"></script>
+    <div id="sa_contactdiv">
+    <form name=sa_htmlform style="margin:0px" onsubmit="return sa_contactform()">
+    <table>
+    <tr><td>Nom: <span style="color:#D70000">*</span><br><input type="text" name="name" required="true" /></td></tr>
+    <tr><td>Je viens: <span style="color:#D70000">*</span><br><select name="title" size="1" required="true"><option value="">Selectionnez</option><option value="Mr.">Oui</option><option value="Mrs.">Non</option></select></td></tr>
+    <tr><td>Message:<br><textarea name="message" cols="42" rows="9"></textarea></td></tr>
+    <tr><td><input type="submit" value="Send Message" style="font-weight:bold"></td></tr>
+    </table>
+    </form></div>
     <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyDtIvLpS9iPRVdSDfaVtJjLAH-ZlO34bo0'></script>
     <div class="gmapp" style='overflow:hidden;'>
       <div id='gmap_canvas' class="gmapp"></div>
