--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <video loop="loop" autoplay="autoplay" muted="muted" src="./video/30-HQ-bluebg2-HB.mp4"></video>
   </div>
   <div class="content">
-    <h1>Lorem Ipsummm</h1>
-    <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis ornare vel eu leo. Cras mattis consectetur purus sit amet fermentum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-    <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis ornare vel eu leo. Cras mattis consectetur purus sit amet fermentum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+    <h1>30ans de Monica !</h1>
+    <h2>Le 1er Octobre 2016</h2>
+    <h3>à 19h30 au Bar 3</h3>
+    <p>Rendez-vous au <strong>bar 3</strong> (3 rue de l'ancienne comédie 75006 Paris) <strong>à partir de 19h30</strong> pour fêter dignement ce jour. <strong>Une dédicace à la Thaïlande est la bienvenue</strong> (je sais que vos esprits créatifs sauront me surprendre).</p>
+    <p>Une cagnotte sera à votre disposition pour rendre ce voyage plus qu'incroyable !</p>
+    <p>N'hésitez pas à nous prévenir de votre venue :</p>
     <form action="https://formspree.io/lucas@anatec.io"
       method="POST">
         <div>
