Updates style again

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>30</title>
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +14,7 @@
     <h1>30ans de Monica !</h1>
     <h2>Le 1er Octobre 2016</h2>
     <h3>à 19h30 au Bar 3</h3>
-    <p>Rendez-vous au <strong>bar 3</strong> (3 rue de l'ancienne comédie 75006 Paris) <strong>à partir de 19h30</strong> pour fêter dignement ce jour. <strong>Une dédicace à la Thaïlande est la bienvenue</strong> (je sais que vos esprits créatifs sauront me surprendre).</p>
+    <p>Rendez-vous au <strong>Bar 3</strong> (3 rue de l'ancienne comédie 75006 Paris) <strong>à partir de 19h30</strong> pour fêter dignement ce jour. <strong>Une dédicace à la Thaïlande est la bienvenue</strong> (je sais que vos esprits créatifs sauront me surprendre).</p>
     <p>Une cagnotte sera à votre disposition pour rendre ce voyage plus qu'incroyable !</p>
     <p>N'hésitez pas à nous prévenir de votre venue :</p>
     <form action="https://formspree.io/lucas@anatec.io"
