Adds paperjs faces

--- a/index.html
+++ b/index.html
@@ -5,19 +5,33 @@
   <title>30</title>
   <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script type="text/javascript" src="./js/paper.js"></script>
+  <script type="text/paperscript" src="./js/myScript.js" canvas="myCanvas"></script>
 </head>
 <body>
+  <div class="paperjselements">
+    <img src="imgs/m0.png" id="m0">
+    <img src="imgs/m1.png" id="m1">
+    <img src="imgs/m2.png" id="m2">
+    <img src="imgs/m3.png" id="m3">
+    <img src="imgs/m4.png" id="m4">
+    <img src="imgs/m5.png" id="m5">
+    <img src="imgs/m6.png" id="m6">
+    <img src="imgs/m7.png" id="m7">
+    <img src="imgs/m8.png" id="m7">
+  </div>
   <div class="videocontainer">
     <video loop="loop" autoplay="autoplay" muted="muted" src="./video/30-HQ-bluebg2-HB.mp4"></video>
   </div>
+  <canvas id="myCanvas" resize></canvas>
   <div class="content">
-    <h1>30ans de Monica !</h1>
+    <h1>30 ans de Monica !</h1>
     <h2>Le 1er Octobre 2016</h2>
     <h3>à 19h30 au Bar 3</h3>
     <p>Rendez-vous au <strong>Bar 3</strong> (3 rue de l'ancienne comédie 75006 Paris) <strong>à partir de 19h30</strong> pour fêter dignement ce jour. <strong>Une dédicace à la Thaïlande est la bienvenue</strong> (je sais que vos esprits créatifs sauront me surprendre).</p>
     <p>Une cagnotte sera à votre disposition pour rendre ce voyage plus qu'incroyable !</p>
     <p>N'hésitez pas à nous prévenir de votre venue :</p>
-    <form action="https://formspree.io/lucas@anatec.io"
+    <form action="https://formspree.io/Sbivigou@gmail.com"
       method="POST">
         <div>
           <label for="nom">Nom Prénom :</label>
