--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
   <div class="paperjselements">
-    <img src="imgs/m0.png" id="m0">
-    <img src="imgs/m1.png" id="m1">
-    <img src="imgs/m2.png" id="m2">
-    <img src="imgs/m3.png" id="m3">
-    <img src="imgs/m4.png" id="m4">
-    <img src="imgs/m5.png" id="m5">
-    <img src="imgs/m6.png" id="m6">
-    <img src="imgs/m7.png" id="m7">
-    <img src="imgs/m8.png" id="m7">
+    <img src="./imgs/m0.png" id="m0">
+    <img src="./imgs/m1.png" id="m1">
+    <img src="./imgs/m2.png" id="m2">
+    <img src="./imgs/m3.png" id="m3">
+    <img src="./imgs/m4.png" id="m4">
+    <img src="./imgs/m5.png" id="m5">
+    <img src="./imgs/m6.png" id="m6">
+    <img src="./imgs/m7.png" id="m7">
+    <img src="./imgs/m8.png" id="m7">
   </div>
   <div class="videocontainer">
     <video loop="loop" autoplay="autoplay" muted="muted" src="./video/30-HQ-bluebg2-HB.mp4"></video>
