--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <img src="./imgs/m6.png" id="m6">
     <img src="./imgs/m7.png" id="m7">
     <img src="./imgs/m8.png" id="m7">
+    <img src="./imgs/m9.png" id="m9">
+    <img src="./imgs/m10.png" id="m10">
+    <img src="./imgs/m11.png" id="m11">
   </div>
   <div class="videocontainer">
     <video loop="loop" autoplay="autoplay" muted="muted" src="./video/30-HQ-bluebg2-HB.mp4"></video>
